# TokenCost

./: .gitignore  Cargo.toml  LICENSE  README.md  fusebox.yaml.example  package.json  技术.md  架构.md
.claude/: settings.local.json
.github/workflows/: ci.yml  pricing-sync.yml
crates/fusebox-cli/: Cargo.toml
crates/fusebox-cli/src/: main.rs
crates/fusebox-cli/src/commands/: breaker.rs  budget.rs  config_cmd.rs  doctor.rs  mod.rs  pricing.rs  start.rs  status.rs  tail.rs
crates/fusebox-core/: Cargo.toml
crates/fusebox-core/src/: budget.rs  config.rs  decision.rs  error.rs  lib.rs  pricing.rs  tenant.rs  usage.rs
crates/fusebox-ledger/: Cargo.toml
crates/fusebox-ledger/migrations/postgres/: 0001_init.sql
crates/fusebox-ledger/migrations/sqlite/: 0001_init.sql
crates/fusebox-ledger/src/: breaker_event.rs  event.rs  lib.rs  memory.rs  postgres.rs  sqlite.rs  store.rs
crates/fusebox-policy/: Cargo.toml
crates/fusebox-policy/src/: anomaly.rs  breaker.rs  engine.rs  estimate.rs  lib.rs
crates/fusebox-proxy/: Cargo.toml
crates/fusebox-proxy/src/: admin.rs  app.rs  budget_requests.rs  estimate.rs  identity.rs  lib.rs  main.rs  metrics.rs  routes.rs  state.rs  stream_reconcile.rs  upstream.rs
examples/: README.md
examples/anthropic-python/: chat.py
examples/openai-python/: chat.py
examples/openai-typescript/: chat.mjs
examples/runaway-demo/: demo.sh
pricing/: anthropic.yaml  bedrock.yaml  google.yaml  openai.yaml  openrouter.yaml
scripts/: sync-pricing.py
