[workspace]
resolver = "2"
members = [
    "crates/fusebox-core",
    "crates/fusebox-ledger",
    "crates/fusebox-policy",
    "crates/fusebox-proxy",
    "crates/fusebox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Fusebox Contributors"]
license = "Apache-2.0"
repository = "https://github.com/fusebox-dev/fusebox"
homepage = "https://fusebox.dev"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Token counting
tiktoken-rs = "0.6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = { version = "0.12", features = ["send_guard"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
once_cell = "1"

# Workspace-internal
fusebox-core = { path = "crates/fusebox-core" }
fusebox-ledger = { path = "crates/fusebox-ledger" }
fusebox-policy = { path = "crates/fusebox-policy" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
