[package]
name = "fusebox-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Spend ledger backend for Fusebox (SQLite default, Postgres optional)"
repository.workspace = true

[dependencies]
fusebox-core = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
