[package]
name = "fusebox-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI / Anthropic compatible HTTP gateway with circuit breaker"
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fusebox-proxy"
path = "src/main.rs"

[dependencies]
fusebox-core = { workspace = true }
fusebox-ledger = { workspace = true }
fusebox-policy = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

tiktoken-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
